[fix] Don't rely on gap-y

--- a/src/app.css
+++ b/src/app.css
@@ -100,9 +100,7 @@ body {
   @apply w-full sm:w-2/3 md:w-3/4 sm:px-4 md:px-8 mx-auto flex justify-between;
 }
 
-.window {
-  width: 100% !important;
-}
+.window { width: 100% !important; }
 
 @media (min-width:theme('screens.sm')) {
   .window { width: fit-content !important; }
